--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,6 @@
 :root {
     --primary-color: #ed4190;
 }
-/* *{
-    text-decoration: none;
-    margin: 0px;
-    padding: 0px;
-    border: 0px;
-    font-size: 100%;
-} */
  a{
     text-decoration: none;
  }
@@ -20,7 +13,10 @@ ul {
 .img_center {
     margin-left: 17%;
 }
-h1 {
+fieldset {
+    border-style: none;
+}
+.theme {
     /* grid-area: left-cell; */
     text-transform: uppercase;
     color: #f90b6d;
@@ -46,7 +42,7 @@ h2 {
     font-weight: 300px;
     height: 28px;
     /* text-align: center; */
-    color: var(--primary-color);
+    color: #f90b6d;
     margin: 5px 0px 10px;
 }
 h3 {
@@ -71,11 +67,10 @@ body{
 /* một cột */
 .col1 {
     display: grid;
-    gap: 20px;
+    gap: 10px;
     grid-template-columns: auto auto auto;
     /* grid-template-rows: auto auto auto; */
 }
-
 
 /* hai cột lệch phải */
 .col2 {
@@ -84,6 +79,7 @@ body{
     gap: 10px;
 }
 .col2_aside_left {
+    max-width: 1020px;
     grid-column-start: 1;
     grid-column-end: 2;
 }
@@ -137,7 +133,7 @@ nav a{
     border-color: #fff;
     margin: 3px;
     top: 0px;
-    box-shadow: 0px 0px 3px 0px #00000066;
+    box-shadow: 0px 0px 4px 0px #00000066;
     color: var(--primary-color);
     /* grid-area: nav-cell; */
 }
@@ -193,29 +189,37 @@ nav  a:hover {
 }
 /* icon header */
 .icon {
-    box-shadow: 0px 0px 2px 0px #0000004d;
+    /* box-shadow: 0px 0px 2px 0px #0000004d; */
     position: absolute;
     right: 20px;
-    
 }
-.fa-search {
-    min-width: 20px;
-    min-height: 20px;
-    color: #fff;
+.fas,.fab {
+    width: 20px;
+    height: 20px;
     background-color: #cddc39;
-    padding: 0px 4px 4px;
+    border-radius: 3px;
+    border-radius: 3px;
+    padding: 5px 4px 4px;
+    margin-bottom: 4px;
     text-align: center;
+    color: #fff;
 }
-.fa-search:hover {
+.fa-sticky-note{
+    transform: translateY(-23%);
+}
+.fa-search,.fa-shopping-cart:hover {
     cursor: pointer;
 }
 .fa-shopping-cart {
-    min-height: 20px;
-    min-width: 20px;
     color: var(--primary-color);
-    background-color: #cddc39;
-    padding: 0px 4px 4px;
-    text-align: center;
+}
+.fa-map-marker-alt {
+    color: var(--primary-color);
+}
+.fa-facebook-f,.fa-twitter,.fa-pinterest {
+    background-color: #fff;
+    color: #f90b6d;
+    padding: 0;
 }
 img {
     border-radius: 5px;
@@ -245,7 +249,8 @@ aside{
 div.prop > div {
     display: inline-block;
     min-width: 24%;
-    padding-top: 5px;
+    padding-top: 10px;
+    margin-top: 20px;
     text-align: center;
     border: 1px;
     border-style: solid;
@@ -261,6 +266,7 @@ footer {
     border: 1px;
     border-color: #ccc7c8;
     margin-top: 2px;
+    border-style: solid;
 }
 footer a {
     color: var(--primary-color);
@@ -277,14 +283,19 @@ footer a {
     bottom: -5px;
     z-index: 100;
 }
+/* trang chủ */
+.title {
+    padding: 0px 5px;
+    text-align: justify; 
+}
 /* sản phẩm */
 .gradie {
     border-radius: 5px;
-    background: radial-gradient(#cddc39,#76f172);
-    color: var(--primary-color);
-    padding: 15px;
+    background: linear-gradient(#f9f9f9,#cddc39);
+    color: #000;
     display: flex;
     justify-content: center;
+    padding: 15px;
 }
 .box {
     border: 1px;
@@ -294,4 +305,36 @@ footer a {
 }
 .text_center+p {
     padding-left: 15px;
+}
+.block {
+    border: 1px;
+    border-style: solid;
+    border-radius: 5px;
+    border-color: #dbd7d9;
+}
+/* Liên hệ */
+.locate {
+    display: flex;
+    vertical-align: text-top;
+}
+.element_center {
+    position: relative;
+    left: 25%;
+}
+.btn{
+    position: relative;
+    left: 25%;
+}
+/* Giới thiệu */
+.gra_fix {
+    position: absolute;
+    top: 80%;
+    left: 10%;
+}
+.p_fix{
+    position: relative;
+    top: 80px;
+}
+.para {
+    position: relative;
 }
