--- a/css/index.css
+++ b/css/index.css
@@ -4,9 +4,6 @@
  a{
     text-decoration: none;
  }
-ul {
-    list-style: inside;
-}
 .text_center{
     text-align: center;
 }
@@ -140,7 +137,7 @@ nav a{
     border-color: #fff;
     margin: 3px;
     top: 0px;
-    box-shadow: 0px 0px 4px 0px #00000066;
+    box-shadow: 0px 0px 3px 0px #00000066,0 0 2px 0 #0000004d;
     color: var(--primary-color);
     /* grid-area: nav-cell; */
 }
@@ -338,7 +335,7 @@ footer a {
 /* Giới thiệu */
 .para {
     position: relative;
-    min-width: 283px;
+    width: 283px;
 }
 .gra_fix {
     position: absolute;
