--- a/css/index.css
+++ b/css/index.css
@@ -18,21 +18,28 @@ fieldset {
     text-transform: uppercase;
     color: #f90b6d;
     font-size: 28px;
-    margin: 12px 0px 0px;
+    margin: 12px 0px 15px;
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 300px;
     height: 34px;
 }
-.gradient {
+h1.theme::after {
     content: "";
     position: relative;
     width: 200px;
     height: 3px;
-    margin: 5px 0px 16px;
+    margin: 0px 0px 16px;
     left: 42%;
     transform: rotateX('20') translateX(50%);
     background: radial-gradient(#cddc39,#fff);
+    display: block;
+}
+h1.theme_fix::after {
+    left: 15%;
+}
+h1.theme_fix_tintuc::after {
+    left: 0%;
 }
 h2 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
